plugins {
    id 'java'
    id 'application'
}

group 'com.fuckers.gym'
version '1.0'

sourceCompatibility = 1.8

sourceSets {
    main {
        java {
            srcDir 'src/main'
        }
    }

    test {
        java {
            srcDirs = ['src/main', 'src/test']
        }
    }
}

run {
    mainClassName = 'Index'
    args = ['--add-modules java.se.ee']
}

test {
    useJUnit()
}

repositories {
    mavenCentral()
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
    compile group: 'org.hibernate', name: 'hibernate-core', version: '5.2.16.Final'
    compile group: 'org.apache.derby', name: 'derbyclient', version: '10.12.1.1'
}
